<resources>
    <string name="app_name">SmartPager</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string-array name="main_activity_tabs">
        <item>MESSAGES</item>
        <item>ARCHIVE</item>
        <item>CONTACTS</item>
        <item>DIALER</item>
    </string-array>
    <string-array name="settings_activity_tabs">
        <item>GENERAL SETTINGS</item>
        <item>PAGER SETTINGS</item>
    </string-array>
    <string name="settings_alerts">ALERTS</string>
    <string-array name="quick_resp_defaults">
        <item>Can you please provide more details?</item>
        <item>Can you please take this for me?</item>
        <item>How urgent is this?</item>
        <item>I am at lunch and I will deal with it when I return.</item>
        <item>I am currently busy with a patient.</item>
        <item>I am currently not on call.</item>
        <item>I am currently out of the office.</item>
        <item>I am off today.</item>
        <item>I will be right there.</item>
        <item>I will call them right away!</item>
    </string-array>
    <string-array name="settings_inbound_modes">
        <item>SmartPage</item>
        <item>Call Home</item>
        <item>Call Mobile</item>
    </string-array>
    <string-array name="settings_failover_to_page">
        <item>5 seconds</item>
        <item>10 seconds</item>
        <item>15 seconds</item>
        <item>20 seconds</item>
        <item>25 seconds</item>
        <item>30 seconds</item>
        <item>35 seconds</item>
        <item>40 seconds</item>
        <item>45 seconds</item>
        <item>50 seconds</item>
        <item>55 seconds</item>
        <item>60 seconds</item>
    </string-array>
    <string-array name="personal_verification_questions">
        <item>What was the first book I ever read?</item>
        <item>What was the first company I ever worked for?</item>
        <item>What High School did my mother attend?</item>
        <item>In which city was my mother born?</item>
        <item>What is my spouse\'s/partner\'s middle name?</item>
        <item>In which city did I get married?</item>
        <item>What is my best friend\'s first name?</item>
        <item>What is the name of the first school I attended?What is the name of the first school I attended?What is the name of the first school I attended?</item>
        <item>What was my kindergarten teacher\'s last name?</item>
        <item>What is the first name of my oldest cousin?</item>
    </string-array>
    <string name="title_activity_license">Review License (Scroll Down)</string>
    <string name="hello_world">Hello world!</string>
    <string name="decline">Decline</string>
    <string name="agree">Agree</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="add_favourite">Add Favourite</string>
    <string name="remove_favourite">Remove Favourite</string>
    <string name="title_activity_mobile_verification">Device Registration</string>
    <string name="mobile_number_verification">Mobile\nNumber\nVerification</string>
    <string name="personal_infor_additional">Review\nProfile</string>
    <string name="pin_code_registration">PIN code\nRegistration</string>
    <string name="please_enter_your_mobile_number">Enter Your Mobile Phone Number</string>
    <string name="after_confirming">Hit the \'Next\' key  below to proceed</string>
    <string name="title_activity_personal_infor">Review Your Profile</string>
    <string name="save_and_continue">Save and Continue</string>
    <string name="title_activity_pin_code">Enter Pin Code</string>
    <string name="you_will_need_to_enter_this_code">You will need to enter this code occasionally before you can use SmartPager.</string>
    <string name="please_enter_the_pin_a_second_time_to_confirm">Please enter the PIN a second time to confirm</string>
    <string name="please_enter_digit">Please enter 4 digit PIN</string>
    <string name="please_enter_your_contact_information">Please review your profile information</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="title">Title</string>
    <string name="phone">Phone:</string>
    <string name="pager">Pager:</string>
    <string name="close">Close</string>
    <string name="are_you_sure_you_want_to_cancel_this_message">Are you sure you want to cancel this message?</string>
    <string name="are_you_sure_you_want_to_clear_archive">Are you sure you want to clear Archive?</string>
    <string name="organization">Organization:</string>
    <string name="departments">Departments:</string>
    <string name="new_photo">New Photo</string>
    <string name="sms_verification">SMS Verification</string>
    <string name="it_can_take">It can take from 5 to 50 sec.</string>
    <string name="page">Page</string>
    <string name="call">Call</string>
    <string name="mins_ago">mins ago</string>
    <string name="action_settings">Settings</string>
    <string name="action_info">Info</string>
    <string name="action_clear">Clear Archive</string>
    <string name="action_search">Search</string>
    <string name="action_add_contact">Add Contact</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_activity_chat">Chat</string>
    <string name="title_mute_notifications">Mute Notifications</string>
    <string name="title_activity_contact_details">Contact Details</string>
    <string name="chat">Chat</string>
    <string name="phone_number">Phone Number</string>
    <string name="smartpager_id">SmartPager ID</string>
    <string name="delete">Delete</string>
    <string name="title_activity_group_details">Group Details</string>
    <string name="please_select_either_jpg_or_png_file">Please select either jpg or png file</string>
    <string name="no_such_file_or_directory">No Such File or Directory</string>
    <string name="save_data">Save data</string>
    <string name="page_to_group">Page to group</string>
    <string name="group_type">Group type</string>
    <string name="members">Members</string>
    <string name="not_mobile_connection_to_make_a_call">You do not currently have a mobile connection to make a call</string>
    <string name="failed_to_call_contact">Failed to call contact</string>
    <string name="title_activity_new_message">New Message</string>
    <string name="record">Record</string>
    <string name="attach">Attach</string>
    <string name="hint_type_new_message">Type new message</string>
    <string name="hint_to">To:</string>
    <string name="hint_subject">Subject:</string>
    <string name="call_back_number_required">Callback Number&#42;:</string>
    <string name="required">&#42;:</string>
    <string name="call_back_number_not_required">Callback Number:</string>
    <string name="hint_type_answer">Click here to type your answer</string>
    <string name="message_was_sent">Message was sent</string>
    <string name="title_activity_recipietn_list">Add Contact</string>
    <string name="title_activity_image_gallery">View Images</string>
    <string name="title_activity_settings_host">Settings</string>
    <string name="settings_my_profile">My Profile</string>
    <string name="settings_archive_settings">Archive Settings</string>
    <string name="settings_pin_settings">Pin Settings</string>
    <string name="settings_quick_responses">Quick Responses</string>
    <string name="settings_auto_text_response">Auto Reply</string>
    <string name="settings_forward_pages">Forward Pages</string>
    <string name="title_activity_my_profile">My Profile</string>
    <string name="title_activity_archive_settings">Archive Settings</string>
    <string name="title_activity_pin_settings">Pin Settings</string>
    <string name="title_activity_quick_responses">Quick Responses</string>
    <string name="title_activity_auto_text_response">Auto Reply</string>
    <string name="title_activity_forward_pages">Forward Pages</string>
    <string name="title_activity_change_pin">Change Pin</string>
    <string name="title_activity_check_pin">Check Pin</string>
    <string name="title_activity_personal_verification_questions">Personal Verification Questions</string>
    <string name="change_pin_enter_current">Enter Your Current PIN</string>
    <string name="change_pin_enter_new">Enter New PIN</string>
    <string name="change_pin_enter_second">Enter PIN a second time to confirm</string>
    <string name="change_pin_incorrect">PIN Incorrect</string>
    <string name="change_pin_tries">\u0020more tries</string>
    <string name="change_pin_success">Your PIN has been successfully changed</string>
    <string name="change_pin_your_pin">Your PIN</string>
    <string name="change_pin_has_been_successfully_changed">Has been successfully changed</string>
    <string name="check_pin_incorrect_title">Wrong PIN Entered</string>
    <string name="check_pin_incorrect_msg">You entered a wrong PIN. Please, try again.</string>
    <string name="settings_critical_alert">Critical Alert</string>
    <string name="settings_on">On</string>
    <string name="settings_off">Off</string>
    <string name="settings_ask">Ask</string>
    <string name="settings_normal_alert">Normal Alert</string>
    <string name="settings_casual_alert">Chat Alert</string>
    <string name="settings_vibration">Vibration</string>
    <string name="settings_voip">VOIP</string>
    <string name="settings_voip_disabled">VOIP - Disabled on Server</string>
    <string name="settings_pager_greetings">PAGER GREETINGS</string>
    <string name="settings_inbound_call_mode">INBOUND CALL MODE</string>
    <string name="settings_inbound_mode">Inbound Mode</string>
    <string name="settings_inbound_mode_failover_to_page">Failover to Page</string>
    <string name="settings_pager_on">Pager On</string>
    <string name="settings_pager_off">Pager Off</string>
    <string name="settings_30_minutes">30 minutes</string>
    <string name="settings_1_hour">1 hour</string>
    <string name="settings_8_hours">8 hours</string>
    <string name="settings_always">Always</string>
    <string name="settings_every">Every</string>
    <string name="settings_change_pin">Change Pin</string>
    <string name="settings_after">After</string>
    <string name="setings_respond">Respond</string>
    <string name="settings__1_hour">1 Hour</string>
    <string name="settings_1_day">1 Day</string>
    <string name="settings_1_week">1 Week</string>
    <string name="settings_1_month">1 Month</string>
    <string name="settings_1_year">1 Year</string>
    <string name="settings_block_my_number">BLOCK MY NUMBER</string>
    <string name="settings_block_my_number_set_on_server">BLOCK MY NUMBER - VALUE SET ON SERVER</string>
    <string name="settings_log_my_calls">LOG MY CALLS</string>
    <string name="settings_required_pin_to_be_entered">REQUIRED PIN TO BE ENTERED</string>
    <string name="settings_archive_messages">ARCHIVE MESSAGES</string>
    <string name="settings_remove_from_archive">REMOVE FROM ARCHIVE</string>
    <string name="settings_add_new_quick_response">ADD NEW QUICK RESPONSE</string>
    <string name="settings_my_quick_responses">MY QUICK RESPONSES</string>
    <string name="hint_type_new_message_here">Type new message here</string>
    <string name="quick_response_add">Add</string>
    <string name="quick_response_customize">Customize this list to send common responses quickly</string>
    <string name="unlock_question_notif">You can answer on the secret question to unlock your mobile number:</string>
    <string name="btn_unlock_question">Unlock</string>
    <string name="actions_archive_all">Archive All</string>
    <string name="number_has_been_locked">Your mobile number has been locked.</string>
    <string name="please_contact_admin">Please contact your administrator or support@smartpager.net</string>
</resources>