<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/item_search_menu"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/action_search"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/action_search"/>
    <item
        android:id="@+id/item_add_contact"
        android:icon="@drawable/social_add_person"
        android:orderInCategory="200"
        android:showAsAction="always"
        android:title="@string/action_add_contact"/>
    <item
        android:id="@+id/item_settings"
        android:icon="@drawable/action_settings"
        android:orderInCategory="400"
        android:showAsAction="always"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/item_info"
        android:icon="@drawable/action_info"
        android:orderInCategory="500"
        android:showAsAction="always"
        android:title="@string/action_info"/>
    <item
        android:id="@+id/item_clear_archive"
        android:icon="@drawable/content_discard"
        android:title="@string/action_clear"
        android:orderInCategory="300" 
        android:showAsAction="always">
    </item>
    <item
        android:id="@+id/item_archive_all"
        android:icon="@drawable/content_discard"
        android:title="@string/actions_archive_all"
        android:orderInCategory="350" 
        android:showAsAction="always">
    </item>
</menu>