<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/backgroundView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/LinearLayout"
        android:layout_alignTop="@+id/LinearLayout"
        android:background="@drawable/bg_regestration_step_three" />

   <LinearLayout
       android:id="@+id/LinearLayout"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:gravity="center"
       android:orientation="horizontal" >

        <TextView
            android:id="@+id/mobile_verification_textView"
            style="@style/style_authorization_header_item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minWidth="10dp"
            android:text="@string/mobile_number_verification" />

        <TextView
            android:id="@+id/pincode_textView"
            style="@style/style_authorization_header_item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:lines="3"
            android:text="@string/pin_code_registration" />

        <TextView
            android:id="@+id/personal_infor_textView"
            style="@style/style_authorization_header_item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="0.63"
            android:minLines="3"
            android:text="@string/personal_infor_additional" />

    </LinearLayout>

</RelativeLayout>